--- a/Client/Components/TransOverviewComponent.razor.css
+++ b/Client/Components/TransOverviewComponent.razor.css
@@ -87,4 +87,79 @@
     flex-direction: row;
     align-items: center;
     column-gap: 1.2vh;
+    justify-content: flex-end;
+}
+
+.fakeTag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tagsValue {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+
+.outerDotsAmountAndProp {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.paymentMethod {
+    background-color: #EDEFF7;
+    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.outerProp {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    column-gap: 1vh;
+}
+
+.outerTextAndDes {
+    display: flex;
+    flex-direction: row;
+    column-gap: 1vh;
+}
+
+.desBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+.transDes{
+
+}
+
+.outerDes {
+    display: flex;
 }
