עמוד מבט על- הרקע של הכותרת נצבע בהתאם לצבע הקטגוריה

--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -64,8 +64,8 @@
     width: 100%;
     justify-content: space-around;
     align-items: baseline;
-    background-color: rgba(103, 117, 244, 0.34);
-    border: 1px solid #6775F4;
+/*    background-color: rgba(103, 117, 244, 0.34);
+    border: 1px solid #6775F4;*/
     border-radius: 0.2rem;
     padding: 1.5vh 0;
     
