--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -38,9 +38,14 @@
 
     <div class="content">
 
-        <div class="outerPageTitle">
+        <div class="outerPageTitle" >
 
-
+            <style>
+                .outerPageTitle{
+                    background-color:@catColor;
+                    border:1px solid @catOutlineColor;
+                }
+            </style>
             <h3 class="pageTitle">מבט על: "@subCategoryTitle"</h3>
             @if (!typeByCat)
             {
@@ -316,6 +321,8 @@
     string userIcon = "";
     string streakImgIcon = "";
     string streakStatTitle = "";
+    string catColor = "";
+    string catOutlineColor = "";
 
     protected override async Task OnInitializedAsync()
     {
@@ -345,6 +352,23 @@
         {
             var catTitleRes = await catTitle.Content.ReadAsStringAsync();
             categoryTitle = catTitleRes;
+
+            var catColorRes = await Http.GetAsync("api/Present/getCatColor/" + categoryID);
+            Console.WriteLine("cat color in db- ");
+            if (catColorRes.IsSuccessStatusCode)
+            {
+                var colorFromDB = await catColorRes.Content.ReadAsStringAsync();
+                Console.WriteLine("cat color in db- "+colorFromDB);
+
+                if (colorFromDB!=null)
+                {
+                    catColor = convertCatColors(colorFromDB);
+                }
+                else
+                {
+                    catColor = "rgba(103, 142, 244, 0.13)";
+                }
+            }
 
 
             Console.WriteLine("catTitle had a successful request ");
@@ -434,6 +458,85 @@
         }
 
     }
+
+    public string convertCatColors(string catColor)
+    {
+        string convertedColor = "";
+        string outlineColor = "";
+        switch (catColor)
+        {
+            case "#F4B367": //mustard
+                convertedColor = "rgba(244, 179, 103, 0.13)";
+                outlineColor = "rgba(244, 179, 103, 1)";
+                Console.WriteLine("cat color is mustard");
+                break;
+            case "#AEA2F9": //purple
+                convertedColor = "rgba(174, 162, 249, 0.13)";
+                outlineColor = "rgba(174, 162, 249, 1)";
+                Console.WriteLine("cat color is dark purple");
+                break;
+            case "#F467AB": //dark pink
+                convertedColor = "rgba(244, 103, 171, 0.13)";
+                outlineColor = "rgba(244, 103, 171, 1)";
+                Console.WriteLine("cat color is dark pink");
+                break;
+            case "#F47867": //salmon pink
+                convertedColor = "rgba(244, 120, 103, 0.13)";
+                outlineColor = "rgba(244, 120, 103, 1)";
+                Console.WriteLine("cat color is salmon pink");
+                break;
+            case "#678EF4": //defualt
+                convertedColor = "rgba(103, 142, 244, 0.13)";
+                outlineColor = "rgba(103, 142, 244, 1)";
+                Console.WriteLine("cat color is default");
+                break;
+            case "#8DE4BF": //light green
+                convertedColor = "rgba(141, 228, 191, 0.13)";
+                outlineColor = "rgba(141, 228, 191, 1)";
+                Console.WriteLine("cat color is light green");
+                break;
+            case "#67CAF4": //light blue
+                convertedColor = "rgba(103, 202, 244, 0.13)";
+                outlineColor = "rgba(103, 202, 244, 1)";
+                Console.WriteLine("cat color is light blue");
+                break;
+            case "#FCE884": //banana
+                convertedColor = "rgba(255, 239, 157, 0.13)";
+                outlineColor = "rgba(255, 239, 157, 1)";
+                Console.WriteLine("cat color is banana");
+                break;
+            case "#F9D3C2": //cream
+                convertedColor = "rgba(249, 211, 194, 0.13)";
+                outlineColor="rgba(249, 211, 194, 1)";
+                Console.WriteLine("cat color is cream");
+                break;
+            case "#09AE73": //dark green
+                convertedColor = "rgba(9, 174, 115, 0.13)";
+                outlineColor="rgba(9, 174, 115, 1)";
+                Console.WriteLine("cat color is dark green");
+                break;
+            case "#8C8B8B": //dark gray
+                convertedColor = "rgba(140, 139, 139, 0.25)";
+                outlineColor = "rgba(140, 139, 139, 1)";
+                Console.WriteLine("cat color is dark gray");
+                break;
+            case "#DADADA": //gray
+                convertedColor = "rgba(218, 218, 218, 0.13)";
+                outlineColor = "rgba(218, 218, 218, 1)";
+                Console.WriteLine("cat color is light gray");
+                break;
+        };
+
+        catOutlineColor = outlineColor;
+        return convertedColor;
+    }
+
+
+
+
+
+
+
     public void goToHomePage()
     {
         Nav.NavigateTo("./homePage");
